tests/NormalTests/paczka1/fuzzy1/13089659.err
Error in line 2: UxI9wR S719 90,1
Error in line 3: RLqarg5S S244 53,3
Error in line 19: SFUOE4JEVG A977 25,2
Error in line 22: QIxF S244 1,5
Error in line 27: tkJnyVkxopg S719 74,4
